crates/slab-runtime-macros/tests/ui/backend_handler_typed_missing_result.stderr
error: typed event handlers must return Result<Success, Error>
 --> tests/ui/backend_handler_typed_missing_result.rs:7:1
  |
7 | #[backend_handler]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `backend_handler` (in Nightly builds, run with -Z macro-backtrace for more info)
